rarex | replace naa10 image with text

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.html
@@ -5,14 +5,14 @@
       [href]="naa10FoundationLink"
       target="_blank"
     >
-      <img
-        src="assets/images/naa10-foundation-logo-transparent.png"
-        class="logo__img"
-        [alt]="'Header.Alts.Logo' | translate"
-      />
+      {{ 'Header.NAA10' | translate }}
     </a>
 
-    <a class="main-header__powered-by powered-by" [href]="rarexLink" target="_blank">
+    <a
+      class="main-header__powered-by powered-by"
+      [href]="rarexLink"
+      target="_blank"
+    >
       <img
         class="powered-by__img"
         src="assets/images/powered-by-rarex.png"
