--- a/ddp-workspace/projects/ddp-rarex/src/styles/_table.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_table.scss
@@ -17,13 +17,15 @@
   }
 
   .mat-column-activityActions {
-    width: 10rem;
+    width: 18rem;
 
     button {
-      width: 100%;
+      width: 6.8rem;
+
+      padding: 0.8rem 1.2rem;
 
       & + button {
-        margin-top: 1rem;
+        margin-left: 1rem;
       }
     }
   }
@@ -55,7 +57,6 @@
 
         .mat-cell {
           display: flex;
-          // align-items: center;
 
           width: 100%;
 
@@ -75,8 +76,6 @@
           }
 
           .button {
-            width: auto;
-
             margin: 0;
 
             &:not(:last-of-type) {
