--- a/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.scss
@@ -28,4 +28,14 @@
 
     margin: 0;
   }
+
+  .button-container {
+    padding: 3px 0;
+
+    button {
+      & + button {
+        margin-top: 3px;
+      }
+    }
+  }
 }
