atcp | add submit button for consent edit activity

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/survey/survey.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/survey/survey.component.html
@@ -11,6 +11,7 @@
 
     <div class="workdir" [ngClass]="{ 'is-assent': isAssentActivity }">
       <app-workflow-progress
+        *ngIf="!isConsentEditActivity"
         [steps]="activities"
         [instanceGuid]="instanceGuid"
         (onChangeActivity)="onChangeActivity($event)"
