--- a/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.html
@@ -161,7 +161,7 @@
                             [alt]="'HomePage.PartnersSection.ImagesAlts.QUADW' | translate">
                     </a>
                     <a href="https://childrenscancer.org/zach/" target="_blank">
-                        <img lazy-resource class="image" src="assets/images/partner-zsof.jpg"
+                        <img lazy-resource class="image" src="assets/images/partner-zsof.png"
                             [alt]="'HomePage.PartnersSection.ImagesAlts.ZSOF' | translate">
                     </a>
                 </div>
