atcp | remove edit button from assent activity

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.html
@@ -121,7 +121,10 @@
         </button>
 
         <button
-          *ngIf="activity.activityCode !== activityCodes.REVIEW_AND_SUBMISSION"
+          *ngIf="
+            activity.activityCode !== activityCodes.REVIEW_AND_SUBMISSION &&
+            activity.activityCode !== activityCodes.ASSENT
+          "
           class="BtnFilled BtnFilled--blue"
           (click)="editActivity.emit(activity)"
         >
