--- a/ddp-workspace/projects/ddp-mpc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-mpc/src/styles.scss
@@ -786,8 +786,15 @@ a:focus {
     }
 
     .PageHeader-subTitle {
-        font-size: 1rem;
-        line-height: 1.3rem;
+        font-size: 0.9rem;
+        line-height: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .PageHeader-subTitle {
+        font-size: 0.8rem;
+        line-height: 1rem;
     }
 }
 
