--- a/ddp-workspace/projects/ddp-atcp/src/app/styles/main.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/styles/main.scss
@@ -1,5 +1,6 @@
 @import 'common';
 @import 'buttons';
+@import 'tooltips';
 @import '../../../../../node_modules/bootstrap/dist/css/bootstrap.css';
 @import 'brushes';
 @import 'geometry';
