--- a/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.html
@@ -100,7 +100,8 @@
 
       <button
         *ngIf="
-          activity.instanceGuid === currentActivity?.instanceGuid &&
+          (activity.instanceGuid === currentActivity?.instanceGuid ||
+            activity.previousInstanceGuid !== null) &&
           activity.statusCode === statusCodes.IN_PROGRESS
         "
         class="BtnFilled BtnFilled--blue"
