DDP-5396 allow study admins to edit hidden/read-only activities

--- a/ddp-workspace/projects/ddp-testboston/src/styles.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/styles.scss
@@ -6,7 +6,7 @@
 @import './style/password.scss';
 @import './style/session-expired.scss';
 @import './style/dialogs.scss';
-@import './style/subject-panel.scss';
+@import './style/panels.scss';
 @import './style/right-to-left.scss';
 
 $custom-typography: mat-typography-config($font-family: 'Nunito');
