--- a/ddp-workspace/projects/ddp-atcp/src/app/components/activity-print/activity-print.component.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/activity-print/activity-print.component.scss
@@ -1,9 +1,12 @@
-.controls {
-  display: flex;
-  flex-direction: row-reverse;
+@import '../../styles/variables';
 
-  margin: 1.2rem 0;
-  padding: 0 2.4rem;
+.ButtonBordered--withIcon {
+  margin-top: 0;
+  padding: 7px;
+
+  mat-icon {
+    margin-right: 0px;
+  }
 
   @media print {
     display: none;
@@ -13,4 +16,103 @@
 .printable-content {
   margin: 1.2rem 0;
   padding: 0 2.4rem;
+
+  &__header {
+    display: flex;
+    align-items: center;
+
+    margin-bottom: 1em;
+  }
+
+  &__title {
+    margin: 0;
+    margin-right: 0.4em;
+
+    font-size: 24px;
+    font-weight: 700;
+    color: #4274bc;
+  }
+
+  &__divider {
+    height: 2px;
+
+    background-color: $grey;
+    border: none;
+  }
+}
+
+.radio {
+  display: flex;
+
+  &__outer {
+    width: 16px;
+    height: 16px;
+
+    margin-top: 3px;
+    margin-right: 0.4em;
+
+    position: relative;
+
+    border: 1px solid $light-neutral-grey;
+    border-radius: 50%;
+  }
+
+  &__inner {
+    height: 10px;
+    width: 10px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -5px;
+    margin-left: -5px;
+
+    background-color: $light-neutral-grey;
+    border-radius: 50%;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.as-checkbox {
+  .radio {
+    &__outer {
+      border-radius: 0;
+    }
+
+    &__inner {
+      border-radius: 0;
+    }
+  }
+}
+
+.form-control {
+  font-size: 15px;
+
+  border: 1px solid $silver-grey;
+  border-left: 3px solid $silver-grey;
+  border-radius: 0;
+  box-shadow: none !important;
+}
+
+.composite-block-divider {
+  display: flex;
+  align-items: center;
+
+  margin: 1em 0;
+
+  span {
+    margin-right: 1em;
+  }
+
+  div {
+    flex: 1;
+
+    height: 2px;
+
+    background-color: $grey;
+  }
 }
