--- a/ddp-workspace/projects/ddp-testboston/src/style/panels.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/style/panels.scss
@@ -1,6 +1,7 @@
 @import '../app-theme.scss';
 
-.ddp-subject-panel {
+.ddp-subject-panel,
+.ddp-admin-action-panel {
     background-color: mat-color($app-theme, 200);
     font-family: 'Nunito', sans-serif;
 
@@ -18,6 +19,15 @@
     }
 }
 
+.ddp-admin-action-panel {
+    background-color: mat-color($app-theme, 300);
+
+    &__text {
+        margin: 0 10px 0 0;
+    }
+}
+
+.admin-action-panel-container,
 .subject-panel-container {
     max-width: 1450px;
     padding: 1rem 1.5625rem;
@@ -32,33 +42,7 @@
         flex-direction: column;
         align-items: flex-start;
     }
-}
 
-
-.ddp-admin-action-panel {
-    background-color: mat-color($app-theme, 300);
-    font-family: 'Nunito', sans-serif;
-
-    &__text {
-        display: flex;
-        align-items: center;
-        font-size: 18px;
-        line-height: 28px;
-        margin: 0 10px 0 0;
-        text-decoration: none !important;
-    }
-}
-
-.admin-action-panel-container {
-    max-width: 1450px;
-    padding: 1rem 1.5625rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-}
-
-@media only screen and (max-width: 710px) {
     .ddp-admin-action-panel__text {
         margin: 0 0 10px 0;
     }
