--- a/ddp-workspace/projects/ddp-atcp/src/app/components/footer/footer.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/footer/footer.html
@@ -2,7 +2,9 @@
   <div>
     <div>
       <i class="fa fa-fw fa-envelope-square"></i>
-      <a class="footer-link" href="mailto:support@atfamilies.org" translate>Footer.Contacts.Email</a>
+      <a class="footer-link" href="mailto:support@atfamilies.org" translate
+        >Footer.Contacts.Email</a
+      >
     </div>
     <div class="contacts__entry" translate>
       <i class="fa fa-fw fa-phone-square"></i>
@@ -10,6 +12,6 @@
     </div>
   </div>
   <a [routerLink]="[RouterResource.Welcome]">
-    <img src="assets/images/atcp/original-logo-color.svg">
+    <img src="assets/images/atcp/original-logo-color.svg" />
   </a>
 </footer>
