--- a/ddp-workspace/projects/ddp-atcp/src/app/styles/buttons.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/styles/buttons.scss
@@ -389,6 +389,6 @@ ddp-language-selector {
   }
 }
 
-.button--prev + .button--print {
-  margin-left: 1em;
+.button--print {
+  margin-right: 1em;
 }
